<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/productsFragment"
        android:title="@string/products"
        android:icon="@drawable/products"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/addProductFragment"
        android:title="@string/add_product"
        android:icon="@drawable/add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/infoFragment"
        android:title="@string/info"
        android:icon="@drawable/info"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        app:showAsAction="ifRoom"/>

</menu>