<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/welcome_to_the_portal"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/the_all_in_one_stock_management_and_billing_portal"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLinear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/adminText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_regular"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/administrator_login"
                android:textSize="18sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_regular"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/regsiter"
                android:enabled="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconCheckable="true"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:startIconDrawable="@drawable/id"
            android:importantForAutofill="yes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminID_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_regular"
                android:hint="@string/admin_id"
                android:inputType="text"
                android:importantForAutofill="yes"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:startIconDrawable="@drawable/password"
            android:importantForAutofill="yes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminPASS_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_regular"
                android:hint="@string/admin_pass"
                android:inputType="textPassword"
                android:importantForAutofill="yes"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/authenticateButton"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            app:icon="@drawable/authenticate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/gilroy_medium"
            android:padding="16dp"
            android:textSize="15sp"
            android:text="@string/authenticate_me" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:fontFamily="@font/gilroy_regular"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:layout_marginEnd="18dp"
                android:fontFamily="@font/gilroy_medium"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/termsOfService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/gilroy_medium"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CircularProgressIndicator.Medium"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>